Tuning our model

--- a/Smartphone-Detection/Smartphone-Detection.ipynb
+++ b/Smartphone-Detection/Smartphone-Detection.ipynb
@@ -36,7 +36,7 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "# Evaluation\n",
-    "from sklearn.model_selection import cross_val_score, ShuffleSplit\n",
+    "from sklearn.model_selection import cross_val_score, ShuffleSplit, GridSearchCV\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "# Graphics\n",
@@ -2357,12 +2357,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kfold with 4 folds\n",
-    "cv = ShuffleSplit(n_splits=4,test_size=0.4,random_state=42)\n",
-    "\n",
-    "# Evaluation\n",
-    "rec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring='recall')\n",
-    "spec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring=specificity)"
+    "# Training\n",
+    "svc = SVC(gamma='scale').fit(X_tfidf,y_train)"
    ]
   },
   {
@@ -2374,48 +2370,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall: [0.94117647 0.98765432 0.97619048 0.96590909] 0.9677325896688641 0.01715345323471315\n",
-      "Recall: [0.94117647 0.98765432 0.97619048 0.96590909] 0.9612415044909324 0.023384820977597167\n"
+      "Recall: [0.94117647 0.98765432 0.97619048 0.96590909 0.96703297] 0.9675926651416846 0.015345067018218538\n",
+      "Specificity: [0.94117647 0.98765432 0.97619048 0.96590909 0.96703297] 0.8960520271221576 0.13204602122055545\n"
      ]
     }
    ],
    "source": [
+    "# Kfold with 4 folds\n",
+    "cv = ShuffleSplit(n_splits=5,test_size=0.4,random_state=42)\n",
+    "\n",
+    "# Evaluation\n",
+    "rec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring='recall')\n",
+    "spec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring=specificity)\n",
+    "\n",
     "# Avaliacao\n",
     "print('Recall:',rec,np.mean(rec),np.std(rec))\n",
-    "print('Recall:',rec,np.mean(spec),np.std(spec))"
+    "print('Specificity:',rec,np.mean(spec),np.std(spec))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluating the SVM for both recall and specificity we can see that the results are very good. We do not have a high variation in the folds indicating that we do not have overfitting and in addition the average values are very high.\n",
-    "\n",
-    "We could try to change the parameters of the SVM to achieve an even better result, but since we have quite satisfactory values we will leave it that way."
+    "Evaluating the SVM for both recall and specificity we can see that the results are very good. We do not have a high variation in the folds indicating that we do not have overfitting and in addition the average values are very high."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Deploy\n",
+    "# 5. Tuning\n",
     "\n",
-    "Knowing that our classifier has had good results, let's build a pipeline and save the algorithm to be used in production. For this we will use almost the entire dataset."
+    "Let's try to improve our model considering that roc_auc it will be our best metric, because with these it's possibly to have good predition in both classes (0 and 1)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "       estimator=SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=None,\n",
+       "       param_grid={'C': [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1], 'kernel': ('linear', 'rbf', 'poly', 'sigmoid')},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring='roc_auc', verbose=0)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Objects to use in pipeline\n",
-    "vec = TfidfVectorizer()\n",
-    "svd = TruncatedSVD(n_components=350)\n",
+    "# Model for tuning\n",
     "svc = SVC(gamma='scale')\n",
     "\n",
-    "# Creating pipeline\n",
-    "model = Pipeline([('tf-idf',vec),('svd',svd),('svc',svc)])"
+    "# Params to test\n",
+    "param_grid={\n",
+    "    'C':[0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1],\n",
+    "    'kernel': ('linear','rbf','poly','sigmoid')\n",
+    "}\n",
+    "\n",
+    "# Creating grid_search\n",
+    "grid_search = GridSearchCV(cv=5,estimator=svc,param_grid=param_grid,scoring='roc_auc')\n",
+    "\n",
+    "# Training\n",
+    "grid_search.fit(X_tfidf,y_train)"
    ]
   },
   {
@@ -2426,12 +2453,101 @@
     {
      "data": {
       "text/plain": [
+       "{'C': 0.6, 'kernel': 'linear'}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check best params\n",
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test again the model, but with best params\n",
+    "svc = SVC(gamma='scale',kernel='linear',C=0.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall: [0.91764706 0.95061728 0.96428571 0.93181818 0.95604396] 0.9440824389843998 0.01698938345019107\n",
+      "Specificity: [0.91764706 0.95061728 0.96428571 0.93181818 0.95604396] 0.9487845422850134 0.012452083750868323\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kfold with 4 folds\n",
+    "cv = ShuffleSplit(n_splits=5,test_size=0.4,random_state=42)\n",
+    "\n",
+    "# Evaluation\n",
+    "rec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring='recall')\n",
+    "spec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring=specificity)\n",
+    "\n",
+    "# Avaliacao\n",
+    "print('Recall:',rec,np.mean(rec),np.std(rec))\n",
+    "print('Specificity:',rec,np.mean(spec),np.std(spec))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that we have some improvement in Specificity. Now both metrics have ~95% hits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Deploy\n",
+    "\n",
+    "Knowing that our classifier has had good results, let's build a pipeline and save the algorithm to be used in production. For this we will use almost the entire dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objects to use in pipeline\n",
+    "vec = TfidfVectorizer()\n",
+    "svd = TruncatedSVD(n_components=350)\n",
+    "svc = SVC(gamma='scale',kernel='linear',C=0.6)\n",
+    "\n",
+    "# Creating pipeline\n",
+    "model = Pipeline([('tf-idf',vec),('svd',svd),('svc',svc)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "0    2087\n",
        "1     519\n",
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2443,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2465,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2596,7 @@
        "  tol=0.001, verbose=False))])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2492,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
