Add an explanation

--- a/Smartphone-Detection/Matching.ipynb
+++ b/Smartphone-Detection/Matching.ipynb
@@ -22,13 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
     "# Data manipulation\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "# Text manipulation\n",
@@ -1105,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1233,7 @@
        "6560"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,12 +1262,16 @@
    "source": [
     "# 4. Matching\n",
     "\n",
-    "Now that we have both dataset more cleaned we will perform matching."
+    "We have some techniques to compare similarity between two strings like jaccard index ou fuzzy matching. I test both methods and I don't have good results. These happens because we have a lot of words like 4g, 32gb, ram, dual, chip, etc that disturb a lot our results. These words are not so import to distinguish a smartphone from another so both techniques are not accurate.\n",
+    "\n",
+    "Of course, maybe with other cleaning and preprocessing on text, maybe we have good results with jaccard ou fuzzy. So, we will not use these two techniques but we will use tf-idf.\n",
+    "\n",
+    "The reason it's because this algorihtm can distinguish import words, so 4g, 32gb, ram and etc will not be so important. Therefore we will compare two matrix of tf-idf and return the row with more similarity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,26 +1281,22 @@
     "\n",
     "Parameters:\n",
     "------------\n",
-    "df1: Dataset used to compare by row.\n",
-    "df2: Dataset used to compare.\n",
+    "array1: array used to compare by row.\n",
+    "array2: array used to compare.\n",
     "\n",
     "Returns:\n",
     "------------\n",
     "Dataframe with similar rows.\n",
     "\n",
     "'''\n",
-    "def compute_similarity(df1,df2):\n",
+    "def compute_similarity(array1,array2):\n",
     "    \n",
-    "    # Reset index in both dataset\n",
-    "    df1 = df1.reset_index(drop=True)\n",
-    "    df2 = df2.reset_index(drop=True)\n",
-    "\n",
     "    # Create tf-idf\n",
-    "    vec = TfidfVectorizer().fit(df2['title'])\n",
+    "    vec = TfidfVectorizer().fit(array2)\n",
     "\n",
     "    # Transform\n",
-    "    tfidf_other = vec.transform(df1['title'])\n",
-    "    tfidf_sub = vec.transform(df2['title'])\n",
+    "    tfidf_other = vec.transform(array1)\n",
+    "    tfidf_sub = vec.transform(array2)\n",
     "\n",
     "    # Compute similarity between one row of tfidf_other with entire tfidf_sub\n",
     "    similarity_list = []\n",
@@ -1303,57 +1304,22 @@
     "        similarity_list.append(cosine_similarity(tfidf_other[index,:],tfidf_sub)[0].argmax())\n",
     "\n",
     "    # Concat both dataset\n",
-    "    result = pd.concat([df1,df2.loc[similarity_list].reset_index(drop=True)],join='inner',axis=1)\n",
-    "    result.columns = ['title1','title2']\n",
+    "    result = pd.DataFrame(np.concatenate((array1.reshape(-1,1),array2[similarity_list].reshape(-1,1)),axis=1))\n",
     "    \n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute similarity\n",
-    "result = compute_similarity(other_smart,submarino_smart)\n",
+    "result = compute_similarity(other_smart['title'].values,submarino_smart['title'].values)\n",
     "\n",
     "# Save result\n",
     "result.to_csv('matching.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "\n",
-    "Get smartphone's brands from website.\n",
-    "\n",
-    "Returns:\n",
-    "--------\n",
-    "List with brands\n",
-    "\n",
-    "'''\n",
-    "def get_brands():\n",
-    "    \n",
-    "    # Request\n",
-    "    req = requests.get('https://www.mobilephonesdirect.co.uk/brands')\n",
-    "\n",
-    "    # Parse request to a doc\n",
-    "    doc = html.fromstring(req.content)\n",
-    "    \n",
-    "    # Get brands\n",
-    "    brand_list = []\n",
-    "    for brand in doc.find_class('name'):\n",
-    "        brand_list.append(brand.find('a').text_content().lower())\n",
-    "        \n",
-    "    return brand_list\n",
-    "\n",
-    "# Get list of brands\n",
-    "brand_list = get_brands()"
    ]
   }
  ],
