Improve userList analyzes

--- a/MAL-Spark/Analyzes-1.ipynb
+++ b/MAL-Spark/Analyzes-1.ipynb
@@ -683,6 +683,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So in 15 most populous contries we don't have many difference in user_watching."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -706,6 +713,13 @@
     "\n",
     "# Barplot\n",
     "plot_barplot(serie,'user_completed','Mean','Mean of user completed by country',dx=8,dy=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In graphic above you can see that we have some big differences in user_completed. Users from France, Russia and Germany have completed more animes than others countries, so your company can streaming animes for theses countries in order to achieve more profits."
    ]
   },
   {
@@ -735,8 +749,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again France and Germany appears in good placements."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -758,6 +779,13 @@
     "\n",
     "# Barplot\n",
     "plot_barplot(serie,'user_dropped','Mean','Mean of user dropped by country',dx=8,dy=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "France, Russia and Germany that are countries where we have more users completed and onhold are too where we have more dropped animes."
    ]
   },
   {
@@ -788,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -810,6 +838,13 @@
     "\n",
     "# Barplot\n",
     "plot_barplot(serie,'user_days_spent_watching','Mean','Mean of user days_spent_watching by country',dx=8,dy=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "France and Germany again in good placements."
    ]
   },
   {
@@ -892,8 +927,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -920,6 +957,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Conclusion\n",
+    "\n",
+    "So for our graphics we can conclude:\n",
+    "\n",
+    "- Anime's users tend to be Men. So animes Shonen (for men's public) have more chance to get more views (possibly).\n",
+    "- Countries like France, Germany and Russia have users more active than others countries. So it's a good idea try to focus on these countries to promote an anime.\n",
+    "- But, France, Germany and Russia are too countries where we have users that tend to drop more animes. So you need some precaution.\n",
+    "- User's age it's almost equal in every country and the mean it's 26.\n",
+    "- We don't have big differences in attributes for gender.\n",
+    "\n",
+    "# Suggestion\n",
+    "\n",
+    "If you are starting a streaming service, the graphs (for now) show that the most suitable country to focus on would be Germany.\n",
+    "\n",
+    "Besides being a country where it has one of the largest numbers of users watching anime, they tend to be very active users. Therefore, focusing on this country may be a good strategy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.2 AnimeList\n",
     "\n",
     "So let's explore our data in order to find some insights."
@@ -927,12 +985,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read data\n",
-    "animeList = pd.read_csv('AnimeListCleaned.csv')"
+    "animeList = pd.read_csv('AnimeListCleaned.csv')\n",
+    "\n",
+    "# Columns used for analyze\n",
+    "columns = ['source','rating','score','scored_by','rank','popularity','members','favorites','premiered','studio','genre']\n",
+    "\n",
+    "# Filter by columns\n",
+    "animeList = animeList.loc[:,columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>score</th>\n",
+       "      <th>scored_by</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>members</th>\n",
+       "      <th>favorites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>score</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.450764</td>\n",
+       "      <td>-0.975302</td>\n",
+       "      <td>-0.594729</td>\n",
+       "      <td>0.482013</td>\n",
+       "      <td>0.356272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scored_by</th>\n",
+       "      <td>0.450764</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.396650</td>\n",
+       "      <td>-0.498968</td>\n",
+       "      <td>0.987119</td>\n",
+       "      <td>0.798656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rank</th>\n",
+       "      <td>-0.975302</td>\n",
+       "      <td>-0.396650</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.602623</td>\n",
+       "      <td>-0.426619</td>\n",
+       "      <td>-0.270941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>popularity</th>\n",
+       "      <td>-0.594729</td>\n",
+       "      <td>-0.498968</td>\n",
+       "      <td>0.602623</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.550784</td>\n",
+       "      <td>-0.266389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>members</th>\n",
+       "      <td>0.482013</td>\n",
+       "      <td>0.987119</td>\n",
+       "      <td>-0.426619</td>\n",
+       "      <td>-0.550784</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.791900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>favorites</th>\n",
+       "      <td>0.356272</td>\n",
+       "      <td>0.798656</td>\n",
+       "      <td>-0.270941</td>\n",
+       "      <td>-0.266389</td>\n",
+       "      <td>0.791900</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               score  scored_by      rank  popularity   members  favorites\n",
+       "score       1.000000   0.450764 -0.975302   -0.594729  0.482013   0.356272\n",
+       "scored_by   0.450764   1.000000 -0.396650   -0.498968  0.987119   0.798656\n",
+       "rank       -0.975302  -0.396650  1.000000    0.602623 -0.426619  -0.270941\n",
+       "popularity -0.594729  -0.498968  0.602623    1.000000 -0.550784  -0.266389\n",
+       "members     0.482013   0.987119 -0.426619   -0.550784  1.000000   0.791900\n",
+       "favorites   0.356272   0.798656 -0.270941   -0.266389  0.791900   1.000000"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's check correlation\n",
+    "animeList.corr()"
    ]
   }
  ],
