Starting to analyze AnimeUserList

--- a/MAL-Spark/Analyzes-1.ipynb
+++ b/MAL-Spark/Analyzes-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,13 @@
     "\n",
     "# Graphics\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# Operational System\n",
+    "import os\n",
+    "\n",
+    "# Regular Expression\n",
+    "import re"
    ]
   },
   {
@@ -1549,12 +1555,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating spark session\n",
     "sp = SparkSession.builder.master('local').appName('MAL').getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List files in folder \n",
+    "files = os.listdir('UserAnimeListCleaned')\n",
+    "\n",
+    "# Looking for csv files\n",
+    "exp = re.compile('.csv$')\n",
+    "\n",
+    "# Get csv file\n",
+    "files = [f for f in files if exp.search(f)][0]\n",
+    "\n",
+    "# Read file\n",
+    "UserAnimeList = sp.read.csv('UserAnimeListCleaned/'+files,header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- username: string (nullable = true)\n",
+      " |-- anime_id: string (nullable = true)\n",
+      " |-- my_watched_episodes: integer (nullable = true)\n",
+      " |-- my_score: integer (nullable = true)\n",
+      " |-- my_status: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print Schema\n",
+    "UserAnimeList.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change type\n",
+    "UserAnimeList = UserAnimeList.withColumn('my_score',UserAnimeList['my_score'].cast('int'))\n",
+    "UserAnimeList = UserAnimeList.withColumn('my_watched_episodes',UserAnimeList['my_watched_episodes'].cast('int'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mean for each username\n",
+    "username_mean = UserAnimeList.groupby('username').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Statistics\n",
+    "statistics = username_mean.select('avg(my_watched_episodes)','avg(my_score)').describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------------+------------------+\n",
+      "|summary|avg(my_watched_episodes)|     avg(my_score)|\n",
+      "+-------+------------------------+------------------+\n",
+      "|  count|                  283124|            283059|\n",
+      "|   mean|       19.40477630672478|4.9436072682805285|\n",
+      "| stddev|       281.2469877250342|10.918384976496236|\n",
+      "|    min|                     0.0|               0.0|\n",
+      "|    max|                 65535.0|            2013.0|\n",
+      "+-------+------------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show\n",
+    "statistics.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that in general the mean of watched episodes and score is 19 and 4, but we have a big variation in these values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count for each my status\n",
+    "my_status = UserAnimeList.groupby('my_status').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+-----+\n",
+      "|      my_status|count|\n",
+      "+---------------+-----+\n",
+      "|   Sobrenatural|    1|\n",
+      "|  dead giveaway|    1|\n",
+      "|         Seinen|   14|\n",
+      "|        Handjob|    1|\n",
+      "|          Toys\"|    1|\n",
+      "|           TSA\"|    1|\n",
+      "|        Acción\"|    1|\n",
+      "|good soundtrack|    1|\n",
+      "|      Slapstick|    2|\n",
+      "|            imo|    1|\n",
+      "|             wk|    1|\n",
+      "| Slice of Life\"|    1|\n",
+      "|     G: Seinen\"|    2|\n",
+      "|       Shounen.|    1|\n",
+      "|          AOTS\"|    1|\n",
+      "|             fy|    2|\n",
+      "|           2016|    2|\n",
+      "|           dmc\"|    2|\n",
+      "|         fansub|    1|\n",
+      "|        Romance|    2|\n",
+      "+---------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show\n",
+    "my_status.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that we have wrong values. I need to clean again this column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "\n",
+    "Check if column my status have values between 1 and 6.\n",
+    "\n",
+    "Parameters:\n",
+    "-----------\n",
+    "col: Column pyspark dataframe.\n",
+    "\n",
+    "'''\n",
+    "def check_status(col):\n",
+    "    # All possible status\n",
+    "    status = ['1','2','3','4','5','6']\n",
+    "\n",
+    "    # Check if status is correct\n",
+    "    result = (status[0] == col)\n",
+    "    for s in status[1:]:\n",
+    "        result = (s == col) | result\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter by correct values\n",
+    "UserAnimeList = UserAnimeList.filter(test(UserAnimeList['my_status']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count for each my status\n",
+    "my_status = UserAnimeList.groupby('my_status').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+--------+\n",
+      "|my_status|   count|\n",
+      "+---------+--------+\n",
+      "|        1| 4057788|\n",
+      "|        2|50445526|\n",
+      "|        3| 2985804|\n",
+      "|        4| 3194353|\n",
+      "|        5|       6|\n",
+      "|        6|19392104|\n",
+      "+---------+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show\n",
+    "my_status.orderBy('my_status').show()"
    ]
   }
  ],
