Improve pre-processing

--- a/MAL-Spark/Pre-processing.ipynb
+++ b/MAL-Spark/Pre-processing.ipynb
@@ -351,7 +351,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f99b484d438>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f24eb12f5c0>"
       ]
      },
      "execution_count": 18,
@@ -1518,9 +1518,7 @@
     "\n",
     "In addition, the valid values (different from zero) are only ~ 0.014% of the total, that is, there are few values for analysis.\n",
     "\n",
-    "Again, I believe that this column does not have enough information for the analyzes, so we will exclude them.\n",
-    "\n",
-    "After that, our pre-processing is finished. Just save the dataset now."
+    "Again, I believe that this column does not have enough information for the analyzes, so we will exclude them."
    ]
   },
   {
@@ -1536,6 +1534,230 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-------------------+-----------------+------------------+\n",
+      "|summary|my_watched_episodes|         my_score|         my_status|\n",
+      "+-------+-------------------+-----------------+------------------+\n",
+      "|  count|           80084173|         80077164|          80076687|\n",
+      "|   mean| 13.965991630851322|4.338788008921609|3.0354740893092043|\n",
+      "| stddev| 339.13454649685553|4.027939122867043| 1.963949048838986|\n",
+      "|    min|                   |                 |                  |\n",
+      "|    max|           魔法少女|       smooth art|      supernatural|\n",
+      "+-------+-------------------+-----------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's check again some statistics\n",
+    "userAnimeList.select('my_watched_episodes','my_score','my_status').describe().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that we have some strange things:\n",
+    "\n",
+    "- my_watched_episodes and my_socre have a very higy value\n",
+    "- my_status have strings like supernatural\n",
+    "\n",
+    "First let's fix my_status."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "\n",
+    "Check if column my status have values between 1 and 6.\n",
+    "\n",
+    "Parameters:\n",
+    "-----------\n",
+    "col: Column pyspark dataframe.\n",
+    "\n",
+    "'''\n",
+    "def check_status(col):\n",
+    "    # All possible status\n",
+    "    status = ['1','2','3','4','5','6']\n",
+    "\n",
+    "    # Check if status is correct\n",
+    "    result = (status[0] == col)\n",
+    "    for s in status[1:]:\n",
+    "        result = (s == col) | result\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter by correct values\n",
+    "userAnimeList = userAnimeList.filter(check_status(userAnimeList['my_status']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's fix my_score and my_watched_episodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80075581"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check how many lines we have now\n",
+    "userAnimeList.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Counting values in my_score higher than 10\n",
+    "userAnimeList.filter(userAnimeList['my_score']>10).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apparently the filter in my_status removed the wrong values in my_score. Now let's compute some percentiles in my_watched_episodes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------------------------------------+\n",
+      "|percentile(CAST(my_watched_episodes AS DOUBLE), CAST(0.95 AS DOUBLE), 1)|\n",
+      "+------------------------------------------------------------------------+\n",
+      "|                                                                    27.0|\n",
+      "+------------------------------------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Percentile 0.95\n",
+    "userAnimeList.selectExpr('percentile(my_watched_episodes,0.95)').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------------------------------------+\n",
+      "|percentile(CAST(my_watched_episodes AS DOUBLE), CAST(0.98 AS DOUBLE), 1)|\n",
+      "+------------------------------------------------------------------------+\n",
+      "|                                                                    65.0|\n",
+      "+------------------------------------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Percentile 0.98\n",
+    "userAnimeList.selectExpr('percentile(my_watched_episodes,0.98)').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------------------------------------+\n",
+      "|percentile(CAST(my_watched_episodes AS DOUBLE), CAST(0.99 AS DOUBLE), 1)|\n",
+      "+------------------------------------------------------------------------+\n",
+      "|                                                                   153.0|\n",
+      "+------------------------------------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Percentile 0.99\n",
+    "userAnimeList.selectExpr('percentile(my_watched_episodes,0.99)').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that we don't have many high values in my_watched_episodes. Because they are few value I will prefer to remove them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter by values less than 65\n",
+    "userAnimeList = userAnimeList.filter(userAnimeList['my_watched_episodes']<=65)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After that, our pre-processing is finished. Just save the dataset now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
